[gd_scene load_steps=12 format=3 uid="uid://c2a1nwgr2fd8m"]

[ext_resource type="Script" path="res://multiplayer/scripts/multiplayer.gd" id="1_2u77o"]
[ext_resource type="PackedScene" uid="uid://3ow4gck0gxat" path="res://common/floor.tscn" id="3_owdd8"]
[ext_resource type="PackedScene" uid="uid://bdv1drd2fve82" path="res://common/log.tscn" id="4_hwvk7"]
[ext_resource type="Script" path="res://chop_log/scripts/sun.gd" id="5_2mhsy"]
[ext_resource type="PackedScene" uid="uid://bv03p677nvsmc" path="res://common/player_ui.tscn" id="6_fxef7"]
[ext_resource type="Texture2D" uid="uid://cd4bypggg67bi" path="res://textures/Icons/host_icon.tres" id="6_t5fhp"]
[ext_resource type="Texture2D" uid="uid://cflt0d1lqrby2" path="res://textures/Icons/join_icon.tres" id="7_uwwjh"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_deikl"]
properties/0/path = NodePath("LOG:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("LOG:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("../RigidBodiesStore:position")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("../RigidBodiesStore:rotation")
properties/3/spawn = true
properties/3/replication_mode = 1

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_f4v05"]
sky_top_color = Color(0.180392, 0.439216, 0.717647, 1)
ground_bottom_color = Color(0.188235, 0.34902, 0.2, 1)
ground_horizon_color = Color(0.592157, 0.698039, 0.729412, 1)

[sub_resource type="Sky" id="Sky_wdsdv"]
sky_material = SubResource("ProceduralSkyMaterial_f4v05")

[sub_resource type="Environment" id="Environment_6wqmc"]
background_mode = 2
sky = SubResource("Sky_wdsdv")
tonemap_mode = 2
glow_enabled = true

[node name="Multiplayer" type="Node3D"]
script = ExtResource("1_2u77o")

[node name="RigidBodiesStore" type="Node3D" parent="."]

[node name="Ground" type="Node3D" parent="."]

[node name="FLOOR" parent="Ground" instance=ExtResource("3_owdd8")]

[node name="FLOOR2" parent="Ground" instance=ExtResource("3_owdd8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10)

[node name="FLOOR3" parent="Ground" instance=ExtResource("3_owdd8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, 10)

[node name="FLOOR4" parent="Ground" instance=ExtResource("3_owdd8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, 0)

[node name="FLOOR5" parent="Ground" instance=ExtResource("3_owdd8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, -10)

[node name="FLOOR6" parent="Ground" instance=ExtResource("3_owdd8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -10)

[node name="FLOOR7" parent="Ground" instance=ExtResource("3_owdd8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, -10)

[node name="FLOOR8" parent="Ground" instance=ExtResource("3_owdd8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, 0)

[node name="FLOOR9" parent="Ground" instance=ExtResource("3_owdd8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, 10)

[node name="LOG" parent="Ground" instance=ExtResource("4_hwvk7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.106, 0)

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="Ground"]
replication_config = SubResource("SceneReplicationConfig_deikl")

[node name="Environment" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = SubResource("Environment_6wqmc")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(-0.645458, 0.0306525, 0.763181, 0, 0.999194, -0.0401318, -0.763796, -0.0259034, -0.644938, 0, 0, 0)
light_color = Color(1, 0.945098, 0.196078, 1)
shadow_enabled = true
script = ExtResource("5_2mhsy")

[node name="Camera3D" type="Camera3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 0.870605, 0.491983, 0, -0.491983, 0.870605, 0, 11.1171, 16.6684)

[node name="PlayerUI" parent="." instance=ExtResource("6_fxef7")]

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://multiplayer/multiplayer_character.tscn")
spawn_path = NodePath("..")

[node name="MultiplayerMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MultiplayerMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -132.0
offset_top = -58.0
offset_right = 132.0
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MultiplayerMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="IPInput" type="TextEdit" parent="MultiplayerMenu/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "IP"

[node name="PortInput" type="TextEdit" parent="MultiplayerMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Port"

[node name="HBoxContainer2" type="HBoxContainer" parent="MultiplayerMenu/VBoxContainer"]
layout_mode = 2

[node name="Host" type="Button" parent="MultiplayerMenu/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Host"
icon = ExtResource("6_t5fhp")
icon_alignment = 1

[node name="Join" type="Button" parent="MultiplayerMenu/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Join
"
icon = ExtResource("7_uwwjh")
icon_alignment = 1

[connection signal="pressed" from="MultiplayerMenu/VBoxContainer/HBoxContainer2/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="MultiplayerMenu/VBoxContainer/HBoxContainer2/Join" to="." method="_on_join_pressed"]
